--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,46 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Configurações
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-item>
+    <ion-input label="Pesquisa" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" placeholder="Ex: Armazenamento"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-icon slot="start" name="musical-notes-outline"></ion-icon>
+    <ion-label>Sons</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-icon slot="start" name="image-outline"></ion-icon>
+    <ion-label>Imagens</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-icon slot="start" name="folder-open-outline"></ion-icon>
+    <ion-label>Armazenamento</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-icon slot="start" name="extension-puzzle-outline"></ion-icon>
+    <ion-label>Aplicativos</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-icon slot="start" name="person-circle-outline"></ion-icon>
+    <!-- <ion-label class="cor">Contas</ion-label> -->
+    <ion-label>Contas</ion-label>
+  </ion-item>
+  <ion-item color="danger">
+    <ion-icon slot="start" name="build-outline"></ion-icon>
+    <ion-label>Restaurar Configuração de Fábrica</ion-label>
+  </ion-item>
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <app-explore-container name="Tab 1 page"></app-explore-container> -->
 </ion-content>
