--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,54 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Seus Contatos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-item-divider class="divisa">C</ion-item-divider>
+<ion-item-sliding>
+ <ion-item-options side="start">
+    <ion-item-option color="success">
+     <ion-icon name="call-outline"></ion-icon>
+   </ion-item-option>
+ </ion-item-options>
+
+  <ion-item>
+    <ion-label slot="start">Carlos</ion-label>
+  </ion-item>
+  
+<ion-item-options side="end">
+     <ion-item-option   color="danger">
+       <ion-icon name="trash"></ion-icon>
+     </ion-item-option>
+     <ion-item-option color="secondary">
+       <ion-icon name="star"></ion-icon>
+     </ion-item-option>
+   </ion-item-options>
+</ion-item-sliding>
+
+   <ion-item>
+    <ion-label>Caba</ion-label>
+  </ion-item>
+  <ion-item-divider class="divisa">D</ion-item-divider>
+  <ion-item>
+    <ion-label>Denis</ion-label>
+  </ion-item>
+  <ion-item-divider class="divisa">L</ion-item-divider>
+  <ion-item>
+    <ion-label>Lucas</ion-label>
+  </ion-item>
+  <ion-item-divider class="divisa">T</ion-item-divider>
+  <ion-item>
+    <ion-label>Toin</ion-label>
+  </ion-item>
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 2</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <app-explore-container name="Tab 2 page"></app-explore-container> -->
 </ion-content>
