--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,48 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+     Cadastro
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item-divider class="divisa">Dados Pessoais</ion-item-divider>
+  <ion-item>
+    <ion-input label="Nome" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" placeholder="Digite seu nome"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input label="Data Nascimento" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" type="date"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input label="Hora Nascimento" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" type="time"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input label="Senha" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" type="password"></ion-input>
+  </ion-item>
+ <ion-item>
+   <ion-label>Deficiente</ion-label>
+   <ion-toggle></ion-toggle>
+  </ion-item>
+  <ion-item>
+    <ion-range label="Horas trabalhadas" pin="true" min=1 max=10></ion-range>
+   </ion-item>
+  <ion-item-divider class="divisa">Endereço</ion-item-divider>
+  <ion-item>
+    <ion-input label="Cidade" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" type="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-select label="Estado" label-placement="floating"  fill="solid">
+      <ion-select-option value="PE">Pernambuco</ion-select-option>
+      <ion-select-option value="PB">Paraíba</ion-select-option>
+      <ion-select-option value="BA">Bahia</ion-select-option>
+    </ion-select>
+  </ion-item>
+  <ion-item>
+    <ion-input label="Rua" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" type="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input label="Número" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" type="text" placeholder="45"></ion-input>
+  </ion-item>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
 </ion-content>
