--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,12 +1,31 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Seus Contatos
-    </ion-title>
-  </ion-toolbar>
+    <ion-buttons slot="secondary">
+      <ion-button fill="outline">
+        <ion-back-button defaultHref="/tabs/tab1">Voltar</ion-back-button>
+      </ion-button>
+      </ion-buttons>
+      <ion-title>Contatos</ion-title>
+      <ion-buttons slot="primary">
+      <ion-button color="danger" fill="outline">
+      Editar
+      <ion-icon slot="end" name="create"></ion-icon>
+      </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-toolbar>
+    <ion-segment value="todos">
+    <ion-segment-button value="all">
+    Todos os Contatos
+    </ion-segment-button>
+    <ion-segment-button value="Recentes">
+    Recentes
+    </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
 <ion-item-divider class="divisa">C</ion-item-divider>
 <ion-item-sliding>
  <ion-item-options side="start">
@@ -18,7 +37,7 @@
   <ion-item>
     <ion-label slot="start">Carlos</ion-label>
   </ion-item>
-  
+
 <ion-item-options side="end">
      <ion-item-option   color="danger">
        <ion-icon name="trash"></ion-icon>
@@ -32,6 +51,12 @@
    <ion-item>
     <ion-label>Caba</ion-label>
   </ion-item>
+  <ion-item>
+    <ion-label>Caba2</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Caba3</ion-label>
+  </ion-item>
   <ion-item-divider class="divisa">D</ion-item-divider>
   <ion-item>
     <ion-label>Denis</ion-label>
@@ -40,9 +65,18 @@
   <ion-item>
     <ion-label>Lucas</ion-label>
   </ion-item>
+  <ion-item>
+    <ion-label>Lionel</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Lucaaaaas</ion-label>
+  </ion-item>
   <ion-item-divider class="divisa">T</ion-item-divider>
   <ion-item>
     <ion-label>Toin</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Toin2</ion-label>
   </ion-item>
   <!-- <ion-header collapse="condense">
     <ion-toolbar>
@@ -52,3 +86,10 @@
 
   <app-explore-container name="Tab 2 page"></app-explore-container> -->
 </ion-content>
+<ion-footer>
+    <ion-toolbar>
+
+      <ion-input label="Pesquisa" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" placeholder="Ex: Lucas"></ion-input>
+    </ion-toolbar>
+
+  </ion-footer>
