--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,10 @@
       <ion-icon name="add-circle-outline"></ion-icon>
       <ion-label>Cadastro</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="tab4">
+      <ion-icon name="triangle-outline"></ion-icon>
+      <ion-label>Aba1</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
