--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="secondary">
+    <ion-title>Albuns</ion-title>
+    <!-- <ion-buttons slot="secondary">
       <ion-button fill="outline">
         <ion-back-button defaultHref="/tabs/tab1">Voltar</ion-back-button>
       </ion-button>
@@ -11,12 +12,12 @@
       Editar
       <ion-icon slot="end" name="create"></ion-icon>
       </ion-button>
-      </ion-buttons>
+      </ion-buttons> -->
     </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-toolbar>
+  <!-- <ion-toolbar>
     <ion-segment value="todos">
     <ion-segment-button value="all">
     Todos os Contatos
@@ -77,7 +78,7 @@
   </ion-item>
   <ion-item>
     <ion-label>Toin2</ion-label>
-  </ion-item>
+  </ion-item> -->
   <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 2</ion-title>
@@ -85,11 +86,57 @@
   </ion-header>
 
   <app-explore-container name="Tab 2 page"></app-explore-container> -->
+
+  <!-- <ion-item>
+    <ion-icon color="primary" slot="start" name="call-outline"></ion-icon>
+    <ion-label>Ligações</ion-label>
+    <ion-badge color="primary" slot="end">3</ion-badge>
+  </ion-item>
+  <ion-item>
+    <ion-icon color="warning" slot="start" name="chatbubble-ellipses-outline"></ion-icon>
+    <ion-label>Mensagens</ion-label>
+    <ion-badge color="warning" slot="end">36</ion-badge>
+  </ion-item>
+  <ion-item>
+    <ion-icon color="dark" slot="start" name="mail-outline"></ion-icon>
+    <ion-label>Emails</ion-label>
+    <ion-badge color="dark" slot="end">23</ion-badge>
+  </ion-item>
+  <ion-item>
+    <ion-icon color="success" slot="start" name="call-outline"></ion-icon>
+    <ion-label>Novos Seguidores</ion-label>
+    <ion-badge color="success" slot="end">16</ion-badge>
+  </ion-item>
+  <ion-item>
+    <ion-icon color="danger" slot="start" name="heart-outline"></ion-icon>
+    <ion-label>Curtidas</ion-label>
+    <ion-badge color="danger" slot="end">3</ion-badge>
+  </ion-item> -->
+
+  <ion-item>
+    <ion-label for="">Garota Safada</ion-label>
+    <ion-thumbnail slot="end">
+      <img src="../assets/img/garota.jpg" alt="">
+    </ion-thumbnail>
+  </ion-item>
+  <ion-item>
+    <ion-label for="">Nirvana</ion-label>
+    <ion-thumbnail slot="end">
+      <img src="../assets/img/Nirvana.jpg" alt="">
+    </ion-thumbnail>
+  </ion-item>
+  <ion-item>
+    <ion-label for="">Zé Ramalho</ion-label>
+    <ion-thumbnail slot="end">
+      <img src="../assets/img/Ze.jpg" alt="">
+    </ion-thumbnail>
+  </ion-item>
 </ion-content>
-<ion-footer>
+
+<!-- <ion-footer>
     <ion-toolbar>
 
       <ion-input label="Pesquisa" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" placeholder="Ex: Lucas"></ion-input>
     </ion-toolbar>
 
-  </ion-footer>
+  </ion-footer> -->
