--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-     Cadastro
+     Insta
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-item-divider class="divisa">Dados Pessoais</ion-item-divider>
+  <!-- <ion-item-divider class="divisa">Dados Pessoais</ion-item-divider>
   <ion-item>
     <ion-input label="Nome" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" placeholder="Digite seu nome"></ion-input>
   </ion-item>
@@ -46,6 +46,19 @@
   </ion-item>
   <ion-item>
     <ion-input label="Número" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" type="text" placeholder="45"></ion-input>
-  </ion-item>
-
+  </ion-item> -->
+  <ion-card>
+    <ion-card-header>
+      <ion-avatar>
+        <img src="./assets/img/madruga.jpg">
+      </ion-avatar>
+      <ion-card-title>@SeuMadruga</ion-card-title>
+      <ion-card-subtitle>Música: se você é jovem ainda</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+    <img src="./assets/img/madruga.jpg"/>
+    <ion-card-subtitle>É issai doido!</ion-card-subtitle>
+    <ion-icon name="thumbs-up-outline"></ion-icon>
+    </ion-card-content>
+    </ion-card>
 </ion-content>
