--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-     Aba 4
+     Configurações
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-fab vertical="top" horizontal="end" slot="fixed">
+  <!-- <ion-fab vertical="top" horizontal="end" edge slot="fixed">
     <ion-fab-button  color="success"><ion-icon name="add-outline"></ion-icon></ion-fab-button>
     <ion-fab-list side="start">
     <ion-fab-button><ion-icon name="pencil-outline"></ion-icon></ion-fab-button>
@@ -27,14 +27,77 @@
   </ion-item>
   <ion-button expand="full" color="success">SALVAR</ion-button>
 <ion-button expand="full" color="danger">CANCELAR</ion-button>
-<ion-item-divider>Exercício 2</ion-item-divider>
-<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+<!-- Exercício 2 -->
+<!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
   <ion-fab-button  color="success"><ion-icon name="camera-outline"></ion-icon></ion-fab-button>
   <ion-fab-list side="top">
   <ion-fab-button><ion-icon name="image-outline"></ion-icon></ion-fab-button>
   <ion-fab-button><ion-icon name="caret-forward-circle-outline"></ion-icon></ion-fab-button>
   </ion-fab-list>
 </ion-fab>
-
-
+<ion-item-divider>Exercício 13/09</ion-item-divider>
+  <ion-item>
+    <label for="">Matriculado</label>
+    <ion-badge slot="end" color="danger">NÃO</ion-badge>
+  </ion-item> -->
+  <ion-card>
+    <ion-item>
+      <ion-icon slot="start" name="wifi-outline"></ion-icon>
+      <ion-label>Wifi</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="bluetooth-outline"></ion-icon>
+      <ion-label>Bluetooth</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="call-outline"></ion-icon>
+      <ion-label>Rede Móvel</ion-label>
+    </ion-item>
+  </ion-card>
+  <ion-card>
+    <ion-item>
+      <ion-icon slot="start" name="time-outline"></ion-icon>
+      <ion-label>Hora</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="calendar-outline"></ion-icon>
+      <ion-label>Data</ion-label>
+    </ion-item>
+  </ion-card>
+  <ion-card>
+    <ion-item>
+      <ion-icon slot="start" name="settings-outline"></ion-icon>
+      <ion-label>Geral</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="sunny-outline"></ion-icon>
+      <ion-label>Brilho</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="people-circle-outline"></ion-icon>
+      <ion-label>Contas</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="battery-charging-outline"></ion-icon>
+      <ion-label>Bateria</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="location-outline"></ion-icon>
+      <ion-label>Localização</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="volume-medium-outline"></ion-icon>
+      <ion-label>Volume</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="shield-outline"></ion-icon>
+      <ion-label>Segurança</ion-label>
+    </ion-item>
+  </ion-card>
+  <ion-card>
+    <ion-item>
+      <ion-icon slot="start" name="alert-circle-outline"></ion-icon>
+      <ion-label>Sobre o dispositivo</ion-label>
+    </ion-item>
+  </ion-card>
 </ion-content>
