--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -87,32 +87,6 @@
 
   <app-explore-container name="Tab 2 page"></app-explore-container> -->
 
-  <!-- <ion-item>
-    <ion-icon color="primary" slot="start" name="call-outline"></ion-icon>
-    <ion-label>Ligações</ion-label>
-    <ion-badge color="primary" slot="end">3</ion-badge>
-  </ion-item>
-  <ion-item>
-    <ion-icon color="warning" slot="start" name="chatbubble-ellipses-outline"></ion-icon>
-    <ion-label>Mensagens</ion-label>
-    <ion-badge color="warning" slot="end">36</ion-badge>
-  </ion-item>
-  <ion-item>
-    <ion-icon color="dark" slot="start" name="mail-outline"></ion-icon>
-    <ion-label>Emails</ion-label>
-    <ion-badge color="dark" slot="end">23</ion-badge>
-  </ion-item>
-  <ion-item>
-    <ion-icon color="success" slot="start" name="call-outline"></ion-icon>
-    <ion-label>Novos Seguidores</ion-label>
-    <ion-badge color="success" slot="end">16</ion-badge>
-  </ion-item>
-  <ion-item>
-    <ion-icon color="danger" slot="start" name="heart-outline"></ion-icon>
-    <ion-label>Curtidas</ion-label>
-    <ion-badge color="danger" slot="end">3</ion-badge>
-  </ion-item> -->
-
   <ion-item>
     <ion-label for="">Garota Safada</ion-label>
     <ion-thumbnail slot="end">
@@ -130,6 +104,9 @@
     <ion-thumbnail slot="end">
       <img src="../assets/img/Ze.jpg" alt="">
     </ion-thumbnail>
+  </ion-item>
+  <ion-item routerLink="./nova">
+    <ion-label>Nova</ion-label>
   </ion-item>
 </ion-content>
 
