--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -41,63 +41,9 @@
     <ion-badge slot="end" color="danger">NÃO</ion-badge>
   </ion-item> -->
   <ion-card>
-    <ion-item>
-      <ion-icon slot="start" name="wifi-outline"></ion-icon>
-      <ion-label>Wifi</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon slot="start" name="bluetooth-outline"></ion-icon>
-      <ion-label>Bluetooth</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon slot="start" name="call-outline"></ion-icon>
-      <ion-label>Rede Móvel</ion-label>
-    </ion-item>
-  </ion-card>
-  <ion-card>
-    <ion-item>
-      <ion-icon slot="start" name="time-outline"></ion-icon>
-      <ion-label>Hora</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon slot="start" name="calendar-outline"></ion-icon>
-      <ion-label>Data</ion-label>
-    </ion-item>
-  </ion-card>
-  <ion-card>
-    <ion-item>
+    <ion-item routerLink="./configuracoes">
       <ion-icon slot="start" name="settings-outline"></ion-icon>
-      <ion-label>Geral</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon slot="start" name="sunny-outline"></ion-icon>
-      <ion-label>Brilho</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon slot="start" name="people-circle-outline"></ion-icon>
-      <ion-label>Contas</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon slot="start" name="battery-charging-outline"></ion-icon>
-      <ion-label>Bateria</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon slot="start" name="location-outline"></ion-icon>
-      <ion-label>Localização</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon slot="start" name="volume-medium-outline"></ion-icon>
-      <ion-label>Volume</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon slot="start" name="shield-outline"></ion-icon>
-      <ion-label>Segurança</ion-label>
-    </ion-item>
-  </ion-card>
-  <ion-card>
-    <ion-item>
-      <ion-icon slot="start" name="alert-circle-outline"></ion-icon>
-      <ion-label>Sobre o dispositivo</ion-label>
+      <ion-label>Configurações</ion-label>
     </ion-item>
   </ion-card>
 </ion-content>
