--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!-- <ion-item>
+  <ion-item>
     <ion-input label="Pesquisa" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" placeholder="Ex: Armazenamento"></ion-input>
   </ion-item>
 
@@ -28,73 +28,31 @@
     <ion-label>Aplicativos</ion-label>
   </ion-item>
   <ion-item>
-    <ion-icon slot="start" name="person-circle-outline"></ion-icon> -->
-    <!-- <ion-label class="cor">Contas</ion-label> -->
-    <!-- <ion-label>Contas</ion-label>
+    <ion-icon slot="start" name="person-circle-outline"></ion-icon>
+    <ion-label class="cor">Contas</ion-label>
   </ion-item>
   <ion-item color="danger">
     <ion-icon slot="start" name="build-outline"></ion-icon>
     <ion-label>Restaurar Configuração de Fábrica</ion-label>
-  </ion-item> -->
-  <!-- <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container> -->
-
-  <!-- <ion-chip color="success">
+  </ion-item>
+  <ion-item-divider color="success">Estudando chip</ion-item-divider>
+  <ion-card>
+    <ion-chip color="success">
     <ion-label>Escola</ion-label>
     <ion-icon name="school-outline"></ion-icon>
     </ion-chip>
     <ion-chip color="warning">
       <ion-label>Academia</ion-label>
       <ion-icon name="barbell-outline"></ion-icon>
-      </ion-chip>
-      <ion-chip color="primary">
-        <ion-label>Comércio</ion-label>
-        <ion-icon name="storefront-outline"></ion-icon>
-        </ion-chip> -->
-        <ion-item-divider >A</ion-item-divider>
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src="../assets/img/R.png" alt="">
-          </ion-avatar>
-          <ion-label for="">Adam</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src="../assets/img/R.png" alt="">
-          </ion-avatar>
-          <ion-label for="">Alberto</ion-label>
-        </ion-item>
+    </ion-chip>
+    <ion-chip color="primary">
+      <ion-label>Comércio</ion-label>
+      <ion-icon name="storefront-outline"></ion-icon>
+    </ion-chip>
+    <ion-item>
+      <label for="">Matriculado</label>
+      <ion-badge slot="end" color="danger">NÃO</ion-badge>
+    </ion-item>
+  </ion-card>
 
-        <ion-item-divider >B</ion-item-divider>
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src="../assets/img/Bart.png" alt="">
-          </ion-avatar>
-          <ion-label for="">Bart</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src="../assets/img/R.png" alt="">
-          </ion-avatar>
-          <ion-label for="">Bruno</ion-label>
-        </ion-item>
-
-        <ion-item-divider >H</ion-item-divider>
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src="../assets/img/Homer.jpg" alt="">
-          </ion-avatar>
-          <ion-label for="">Homer</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src="../assets/img/R.png" alt="">
-          </ion-avatar>
-          <ion-label for="">Hugo</ion-label>
-        </ion-item>
 </ion-content>
