--- a/src/app/tab2/nova/nova.page.html
+++ b/src/app/tab2/nova/nova.page.html
@@ -1,6 +1,17 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>nova</ion-title>
+    <ion-buttons slot="secondary">
+      <ion-button fill="outline">
+        <ion-back-button defaultHref="/tabs/tab1">Voltar</ion-back-button>
+      </ion-button>
+    </ion-buttons>
+      <ion-title>Contatos</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button color="danger" fill="outline">
+      Editar
+      <ion-icon slot="end" name="create"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
