--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,91 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Albuns</ion-title>
-    <!-- <ion-buttons slot="secondary">
-      <ion-button fill="outline">
-        <ion-back-button defaultHref="/tabs/tab1">Voltar</ion-back-button>
-      </ion-button>
-      </ion-buttons>
-      <ion-title>Contatos</ion-title>
-      <ion-buttons slot="primary">
-      <ion-button color="danger" fill="outline">
-      Editar
-      <ion-icon slot="end" name="create"></ion-icon>
-      </ion-button>
-      </ion-buttons> -->
     </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!-- <ion-toolbar>
-    <ion-segment value="todos">
-    <ion-segment-button value="all">
-    Todos os Contatos
-    </ion-segment-button>
-    <ion-segment-button value="Recentes">
-    Recentes
-    </ion-segment-button>
-    </ion-segment>
-  </ion-toolbar>
-<ion-item-divider class="divisa">C</ion-item-divider>
-<ion-item-sliding>
- <ion-item-options side="start">
-    <ion-item-option color="success">
-     <ion-icon name="call-outline"></ion-icon>
-   </ion-item-option>
- </ion-item-options>
-
-  <ion-item>
-    <ion-label slot="start">Carlos</ion-label>
-  </ion-item>
-
-<ion-item-options side="end">
-     <ion-item-option   color="danger">
-       <ion-icon name="trash"></ion-icon>
-     </ion-item-option>
-     <ion-item-option color="secondary">
-       <ion-icon name="star"></ion-icon>
-     </ion-item-option>
-   </ion-item-options>
-</ion-item-sliding>
-
-   <ion-item>
-    <ion-label>Caba</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Caba2</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Caba3</ion-label>
-  </ion-item>
-  <ion-item-divider class="divisa">D</ion-item-divider>
-  <ion-item>
-    <ion-label>Denis</ion-label>
-  </ion-item>
-  <ion-item-divider class="divisa">L</ion-item-divider>
-  <ion-item>
-    <ion-label>Lucas</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Lionel</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Lucaaaaas</ion-label>
-  </ion-item>
-  <ion-item-divider class="divisa">T</ion-item-divider>
-  <ion-item>
-    <ion-label>Toin</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Toin2</ion-label>
-  </ion-item> -->
-  <!-- <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container> -->
+  <!-- <app-explore-container name="Tab 2 page"></app-explore-container> -->
 
   <ion-item>
     <ion-label for="">Garota Safada</ion-label>
@@ -106,14 +26,14 @@
     </ion-thumbnail>
   </ion-item>
   <ion-item routerLink="./nova">
-    <ion-label>Nova</ion-label>
+    <ion-label>Estudando Badge</ion-label>
   </ion-item>
 </ion-content>
 
-<!-- <ion-footer>
+<ion-footer>
     <ion-toolbar>
 
       <ion-input label="Pesquisa" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" placeholder="Ex: Lucas"></ion-input>
     </ion-toolbar>
 
-  </ion-footer> -->
+  </ion-footer>
