--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -7,17 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!-- <ion-fab vertical="top" horizontal="end" edge slot="fixed">
-    <ion-fab-button  color="success"><ion-icon name="add-outline"></ion-icon></ion-fab-button>
-    <ion-fab-list side="start">
-    <ion-fab-button><ion-icon name="pencil-outline"></ion-icon></ion-fab-button>
-    <ion-fab-button><ion-icon name="shield-checkmark-outline"></ion-icon></ion-fab-button>
-    </ion-fab-list>
-    <ion-fab-list side="button">
-      <ion-fab-button><ion-icon name="call-outline"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-whatsapp"></ion-icon></ion-fab-button>
-      </ion-fab-list>
-  </ion-fab>
+  <!--
   <ion-item-divider>Exercício 1</ion-item-divider>
   <ion-item>
     <ion-input [clearInput]="true" label="Nome:" type="text" placeholder="Fulano"></ion-input>
@@ -27,6 +17,7 @@
   </ion-item>
   <ion-button expand="full" color="success">SALVAR</ion-button>
 <ion-button expand="full" color="danger">CANCELAR</ion-button>
+-->
 <!-- Exercício 2 -->
 <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
   <ion-fab-button  color="success"><ion-icon name="camera-outline"></ion-icon></ion-fab-button>
@@ -34,16 +25,15 @@
   <ion-fab-button><ion-icon name="image-outline"></ion-icon></ion-fab-button>
   <ion-fab-button><ion-icon name="caret-forward-circle-outline"></ion-icon></ion-fab-button>
   </ion-fab-list>
-</ion-fab>
-<ion-item-divider>Exercício 13/09</ion-item-divider>
-  <ion-item>
-    <label for="">Matriculado</label>
-    <ion-badge slot="end" color="danger">NÃO</ion-badge>
-  </ion-item> -->
+</ion-fab> -->
   <ion-card>
     <ion-item routerLink="./configuracoes">
       <ion-icon slot="start" name="settings-outline"></ion-icon>
       <ion-label>Configurações</ion-label>
+    </ion-item>
+    <ion-item routerLink="./contatos">
+      <ion-icon slot="start" name="person-outline"></ion-icon>
+      <ion-label>Contatos</ion-label>
     </ion-item>
   </ion-card>
 </ion-content>
