--- a/src/app/tab2/nova/nova.page.html
+++ b/src/app/tab2/nova/nova.page.html
@@ -39,4 +39,94 @@
     <ion-label>Curtidas</ion-label>
     <ion-badge color="danger" slot="end">3</ion-badge>
   </ion-item>
+    <!-- <ion-item>
+    <ion-input label="Pesquisa" label-placement="floating"  fill="solid" [clearInput]="true" id="nome" placeholder="Ex: Armazenamento"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-icon slot="start" name="musical-notes-outline"></ion-icon>
+    <ion-label>Sons</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-icon slot="start" name="image-outline"></ion-icon>
+    <ion-label>Imagens</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-icon slot="start" name="folder-open-outline"></ion-icon>
+    <ion-label>Armazenamento</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-icon slot="start" name="extension-puzzle-outline"></ion-icon>
+    <ion-label>Aplicativos</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-icon slot="start" name="person-circle-outline"></ion-icon> -->
+    <!-- <ion-label class="cor">Contas</ion-label> -->
+    <!-- <ion-label>Contas</ion-label>
+  </ion-item>
+  <ion-item color="danger">
+    <ion-icon slot="start" name="build-outline"></ion-icon>
+    <ion-label>Restaurar Configuração de Fábrica</ion-label>
+  </ion-item> -->
+  <!-- <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Tab 1</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <app-explore-container name="Tab 1 page"></app-explore-container> -->
+
+  <!-- <ion-chip color="success">
+    <ion-label>Escola</ion-label>
+    <ion-icon name="school-outline"></ion-icon>
+    </ion-chip>
+    <ion-chip color="warning">
+      <ion-label>Academia</ion-label>
+      <ion-icon name="barbell-outline"></ion-icon>
+      </ion-chip>
+      <ion-chip color="primary">
+        <ion-label>Comércio</ion-label>
+        <ion-icon name="storefront-outline"></ion-icon>
+        </ion-chip> -->
+        <ion-item-divider >A</ion-item-divider>
+        <ion-item>
+          <ion-avatar slot="start">
+            <img src="../assets/img/R.png" alt="">
+          </ion-avatar>
+          <ion-label for="">Adam</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-avatar slot="start">
+            <img src="../assets/img/R.png" alt="">
+          </ion-avatar>
+          <ion-label for="">Alberto</ion-label>
+        </ion-item>
+
+        <ion-item-divider >B</ion-item-divider>
+        <ion-item>
+          <ion-avatar slot="start">
+            <img src="../assets/img/Bart.png" alt="">
+          </ion-avatar>
+          <ion-label for="">Bart</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-avatar slot="start">
+            <img src="../assets/img/R.png" alt="">
+          </ion-avatar>
+          <ion-label for="">Bruno</ion-label>
+        </ion-item>
+
+        <ion-item-divider >H</ion-item-divider>
+        <ion-item>
+          <ion-avatar slot="start">
+            <img src="../assets/img/Homer.jpg" alt="">
+          </ion-avatar>
+          <ion-label for="">Homer</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-avatar slot="start">
+            <img src="../assets/img/R.png" alt="">
+          </ion-avatar>
+          <ion-label for="">Hugo</ion-label>
+        </ion-item>
 </ion-content>
