--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -39,10 +39,11 @@
     <ion-card-subtitle>História</ion-card-subtitle>
     <ion-card-content>O Rock é uma vertente musical surgida do termo Rock and Roll. Originou-se nos Estados Unidos na segunda metade do século XX,alcançando seu auge nos anos 70 e 80.</ion-card-content>
   </ion-card>
-  <ion-item *ngIf="nome == ''">
-    <ion-label>Não há alunos cadastrados!</ion-label>
-  </ion-item>
+
   <ion-card>
+    <ion-item *ngIf="alunos.length === 0">
+    <ion-label>Não há alunos cadastrados!</ion-label>
+    </ion-item>
     <ion-item *ngFor="let aluno of alunos, let i = index">
 
       <ion-label>{{aluno.getNome()}}</ion-label>
@@ -57,5 +58,6 @@
       <ion-input type="number"label="Nota" [(ngModel)]="nota" min="0" max="10"> </ion-input>
     </ion-item>
     <ion-button (click)="cadastrarAlunos()">CADASTRAR</ion-button>
+    <ion-button (click)="apagarTudo()">APAGAR TUDO</ion-button>
   </ion-card>
 </ion-content>
