botão apagar tudo
danger

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -30,6 +30,6 @@
       <ion-input type="number"label="Media:" [(ngModel)]="media" min="0"> </ion-input>
     </ion-item>
     <ion-button (click)="cadastrarAlunos()">CADASTRAR</ion-button>
-    <ion-button (click)="apagarTodos()">APAGAR TUDO</ion-button>
+    <ion-button color="danger" (click)="apagarTodos()">APAGAR TUDO</ion-button>
   </ion-card>
 </ion-content>
